# mcsr-tools

./: README.md
R_profiles/: README.md
old_qwatch/: README.md  __init__.py  byte_size_options.yml  config.sh  watcher.py
qwatch/: LICENSE  Pipfile  README.md  __init__.py  clean.sh  line_graph_workflow.R  pyproject.toml  qstat_dict.yml  qwatch.py  waiter.py
qwatch/qwatch/: __init__.py  async_qwatch.py  cli.py  core.py  qwatch.py
qwatch/qwatch/utils/: async_qwatch.py  clean.sh  config.sh  line_graph_workflow.R
qwatch/tests/: test_qwatch.py
r_environments/: LICENSE  README.md
r_environments/minor_local_libs/: .Rprofile
